# spam_fraud_detector

./: .gitignore  MANIFEST.in  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
spam_fraud_detector/: __init__.py  main.py  test.py
spam_fraud_detector/core/: __init__.py  comparer.py  data_loader.py  utils.py  visualizer.py
spam_fraud_detector/mlruns/0/: meta.yaml
spam_fraud_detector/mlruns/0/04b3d68abaf4408ba22d6ac8163e44d0/: meta.yaml
spam_fraud_detector/mlruns/0/0518a2d4341149ac9c589249fa8469ff/: meta.yaml
spam_fraud_detector/mlruns/0/0533ed5be8634381918855d9f117431c/: meta.yaml
spam_fraud_detector/mlruns/0/053e6bf5ca674f029da6158f19016953/: meta.yaml
spam_fraud_detector/mlruns/0/07db4db4536741758e76c9947f86c280/: meta.yaml
spam_fraud_detector/mlruns/0/09917942e7b945eb8ddfc1512ccabd20/: meta.yaml
spam_fraud_detector/mlruns/0/0ad5285a8d154efcba5e6c032848813c/: meta.yaml
spam_fraud_detector/mlruns/0/12688ea338f946f4bd7c46db77028645/: meta.yaml
spam_fraud_detector/mlruns/0/1450c461aaf541da8eb54b0cc8f6721d/: meta.yaml
spam_fraud_detector/mlruns/0/17febe6ee8ee44ee958da89897640878/: meta.yaml
spam_fraud_detector/mlruns/0/1bcc8d0d5ae34a8abe09f0ab63320287/: meta.yaml
spam_fraud_detector/mlruns/0/21d32b3b925647bb9e61a85a84caccd5/: meta.yaml
spam_fraud_detector/mlruns/0/235ce37df51e45dea0d3d6588e22a82d/: meta.yaml
spam_fraud_detector/mlruns/0/26a5898b9bff4cd0bb913348d7cac2e9/: meta.yaml
spam_fraud_detector/mlruns/0/2c1e73cf422a4ee7adeb3558d5dc1fda/: meta.yaml
spam_fraud_detector/mlruns/0/2c236ffdc88d4e8aa0d3582bb15aec76/: meta.yaml
spam_fraud_detector/mlruns/0/2ee18f6b707541d9bb468050726e1b77/: meta.yaml
spam_fraud_detector/mlruns/0/2f863539281b4357afd190f5df341fde/: meta.yaml
spam_fraud_detector/mlruns/0/34d5598ab1c240faa3ad17f3a2548649/: meta.yaml
spam_fraud_detector/mlruns/0/356cf2896ff9481ea4ee7fbb1d8f9b28/: meta.yaml
spam_fraud_detector/mlruns/0/35f29451ef9d4071b4fb98d11c611749/: meta.yaml
spam_fraud_detector/mlruns/0/36b203d6459c42168b51ef271c0167c2/: meta.yaml
spam_fraud_detector/mlruns/0/39f1bce76df44bd28914ea8a22444a49/: meta.yaml
spam_fraud_detector/mlruns/0/3f65757468364efe89ba89f1892b6e14/: meta.yaml
spam_fraud_detector/mlruns/0/41a38dae1e8c4546b70c5b30885ea217/: meta.yaml
spam_fraud_detector/mlruns/0/43ae70ac3bf14ec4825ed0cb0eb88f40/: meta.yaml
spam_fraud_detector/mlruns/0/45613bff9d9a4a0e80685a2ca8f431c3/: meta.yaml
spam_fraud_detector/mlruns/0/45fd39688b734887836ffedf4046ea0e/: meta.yaml
spam_fraud_detector/mlruns/0/462de85c35ba4a9d97d8fd3361d90552/: meta.yaml
(+500 files in other folders)
