[metadata]
name = spam-fraud-detector
version = 0.1.0
author = Guy Kaptue
author_email = your.email@example.com
description = Modular benchmarking framework for binary classification tasks (spam, fraud, etc.)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuyKaptue/spam-fraud-detector
license = MIT
keywords = spam, fraud, detection, classification, benchmarking, machine-learning
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    pandas
    numpy
    scikit-learn
    matplotlib
    seaborn
    xgboost
    lightgbm
    mlflow
    kagglehub
    openpyxl

[options.extras_require]
viz =
    matplotlib
    seaborn
ml =
    xgboost
    lightgbm
tracking =
    mlflow
dev =
    pytest
    tox
    black
    flake8

[options.entry_points]
console_scripts =
    run-detector = spam_fraud_detector.main:main
